--- a/DemonsAndDogs/Pages/Counter.razor
+++ b/DemonsAndDogs/Pages/Counter.razor
@@ -1,19 +1,19 @@
 ﻿@page "/counter"
+@using System.ComponentModel.Design
 
-<PageTitle>Counter</PageTitle>
+<PageTitle>Manage Rulesets</PageTitle>
 
-<h1>Counter</h1>
+<h1>Rulesets</h1>
 
-<p role="status">Current count: @currentCount</p>
+<p role="status">Current ruleset: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
     private int currentCount = 0;
 
-    private void IncrementCount()
+    protected override Task OnInitializedAsync()
     {
-        currentCount++;
+        return base.OnInitializedAsync();
     }
 
 }
