--- a/UIComponents/CharacterSheet/FieldEditor.razor
+++ b/UIComponents/CharacterSheet/FieldEditor.razor
@@ -1,5 +1,6 @@
 ﻿@using Models.Character
 @using System.Text.Json.Nodes
+@using Microsoft.AspNetCore.Components.Forms
 
 <div class="row mb-2">
     <div class="col">
