--- a/UIComponents/CharacterSheet/SectionEditor.razor
+++ b/UIComponents/CharacterSheet/SectionEditor.razor
@@ -1,5 +1,6 @@
 ﻿@using Models.Character
 @using System.Text.Json.Nodes
+@using Microsoft.AspNetCore.Components.Forms
 
 <div class="mb-4 p-3 border rounded">
     <div class="row mb-2">
