--- a/UIComponents/PageComponents/ResourceManagementPage.razor
+++ b/UIComponents/PageComponents/ResourceManagementPage.razor
@@ -4,40 +4,15 @@
 @using UIComponents.ResourceRegistry
 
 <RadzenTabs>
+    <Tabs>
     <RadzenTabsItem Text="Editor">
-        @if (editorComponentType != null)
-        {
-            <ErrorBoundary @ref="editorBoundary" OnError="OnEditorError">
-                <ChildContent>
-                    <DynamicComponent Type="@editorComponentType" Parameters="editorParameters" />
-                </ChildContent>
-                <ErrorContent>
-                    <div class="p-3">
-                        <div>Editor crashed.</div>
-                        @if (!string.IsNullOrWhiteSpace(editorError))
-                        {
-                            <pre>@editorError</pre>
-                        }
-                    </div>
-                </ErrorContent>
-            </ErrorBoundary>
-        }
-        else
-        {
-            <div class="p-3">EditorType is null for: @ResourceName</div>
-        }
+        <DynamicComponent Type="@editorComponentType" Parameters="editorParameters"/>
     </RadzenTabsItem>
 
     <RadzenTabsItem Text="Resources">
-        @if (gridComponentType != null)
-        {
-            <DynamicComponent Type="@gridComponentType" Parameters="gridParameters" />
-        }
-        else
-        {
-            <div class="p-3">GridType is null for: @ResourceName</div>
-        }
+        <DynamicComponent Type="@gridComponentType" Parameters="gridParameters"/>
     </RadzenTabsItem>
+    </Tabs>
 </RadzenTabs>
 
 @code {
