character template editor vibe coded

--- a/UIComponents/PageComponents/ResourceManagementPage.razor
+++ b/UIComponents/PageComponents/ResourceManagementPage.razor
@@ -42,7 +42,7 @@
 
             gridParameters = new Dictionary<string, object>
             {
-                ["Items"] = Array.Empty<Resource<CharacterResource>>()
+                ["Items"] = Array.Empty<Resource<CharacterData>>()
             };
 
             editorError = null;
