--- a/UIComponents/ResourceGrid/ResourceGrid.razor
+++ b/UIComponents/ResourceGrid/ResourceGrid.razor
@@ -28,6 +28,5 @@
 </RadzenDataGrid>
 
 @code {
-    [Parameter]
-    public IEnumerable<Resource<TResource>> Items { get; set; }
+    [Parameter] public IEnumerable<Resource<TResource>> Items { get; set; }
 }
