--- a/UIComponents/CharacterTemplateEditor.razor
+++ b/UIComponents/CharacterTemplateEditor.razor
@@ -1,4 +1,5 @@
 ﻿@using Models.Character
+@using Models.Resources.Character
 @using Radzen
 @using Radzen.Blazor
 
@@ -162,7 +163,7 @@
                                     </Columns>
                                 </RadzenDataGrid>
 
-                                <RadzenDivider/>
+                                <hr/>
 
                                 <RadzenFieldset Text="Field Details" Expanded="true">
                                     @if (SelectedField is null)
@@ -189,10 +190,6 @@
                                                     </RadzenFormField>
                                                 </RadzenColumn>
                                             </RadzenRow>
-
-                                            <RadzenFormField Text="Pattern">
-                                                <RadzenTextBox Style="width: 100%" @bind-Value="SelectedField.Pattern"/>
-                                            </RadzenFormField>
 
                                             @if (SelectedField.Type is CharacterFieldType.Select or CharacterFieldType.MultiSelect)
                                             {
