--- a/DemonsAndDogs/Layout/MainLayout.razor
+++ b/DemonsAndDogs/Layout/MainLayout.razor
@@ -4,6 +4,10 @@
         <NavMenu/>
     </div>
 
+    <RadzenDialog />
+    <RadzenNotification />
+    <RadzenTooltip />
+    <RadzenContextMenu />
     <main>
         <div class="top-row px-4">
             <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
