--- a/UIComponents/ResourceGrid/ResourceGrid.razor
+++ b/UIComponents/ResourceGrid/ResourceGrid.razor
@@ -1,32 +1,47 @@
 ﻿@typeparam TResource
+@using System.Text.Json
 @using Models.Resources
 @using Models.Resources.Abstract
+@using Radzen
 @using Radzen.Blazor
 
 <RadzenDataGrid TItem="Resource<TResource>" Data="@Items" ColumnWidth="200px">
     <Columns>
-        <RadzenDataGridColumn TItem="Resource<TResource>" Property="Id" Title="Id" />
-        <RadzenDataGridColumn TItem="Resource<TResource>" Property="OwnerId" Title="OwnerId" />
-        <RadzenDataGridColumn TItem="Resource<TResource>" Property="SubjectId" Title="SubjectId" />
-        <RadzenDataGridColumn TItem="Resource<TResource>" Property="Version" Title="Version" />
-        <RadzenDataGridColumn TItem="Resource<TResource>" Property="CreatedAt" Title="CreatedAt" FormatString="{0:G}" />
-        <RadzenDataGridColumn TItem="Resource<TResource>" Property="UpdatedAt" Title="UpdatedAt" FormatString="{0:G}" />
-        @{
-            var dataProperties = typeof(TResource).GetProperties();
-        }
-        @foreach (var prop in dataProperties)
-        {
-            var localProp = prop;
-            <RadzenDataGridColumn TItem="Resource<TResource>" Title="@localProp.Name">
-                <Template Context="row">
-                    @localProp.GetValue(row.Data)
-                </Template>
-            </RadzenDataGridColumn>
-        }
-        <RadzenDataGridColumn TItem="Resource<TResource>" Property="IsDeleted" Title="IsDeleted" />
+        <RadzenDataGridColumn TItem="Resource<TResource>" Property="OwnerId"  Title="OwnerId" Width="160px"/>
+        <RadzenDataGridColumn TItem="Resource<TResource>" Property="Version" Title="Ver" Width="80px" />
+        <RadzenDataGridColumn TItem="Resource<TResource>" Property="CreatedAt" Title="Created" FormatString="{0:G}" Width="180px" />
+        <RadzenDataGridColumn TItem="Resource<TResource>" Property="UpdatedAt" Title="Updated" FormatString="{0:G}" Width="180px" />
+        <RadzenDataGridColumn TItem="Resource<TResource>" Property="IsDeleted" Title="Deleted" Width="90px" />
+
+        <RadzenDataGridColumn TItem="Resource<TResource>" Title="Actions" Width="260px">
+            <Template Context="row">
+                <RadzenStack Orientation="Orientation.Horizontal" Gap="8px">
+                    <RadzenButton Text="View"
+                                  Icon="visibility"
+                                  Size="ButtonSize.Small"
+                                  ButtonStyle="ButtonStyle.Light"
+                                  Click="@(() => ViewJson(row))" />
+                </RadzenStack>
+            </Template>
+        </RadzenDataGridColumn>
     </Columns>
 </RadzenDataGrid>
 
 @code {
-    [Parameter] public IEnumerable<Resource<TResource>> Items { get; set; }
+    [Parameter] public IEnumerable<Resource<TResource>> Items { get; set; } = [];
+    [Inject] DialogService DialogService { get; set; }
+
+    static string ShortId(string id)
+        => string.IsNullOrWhiteSpace(id) ? "" : (id.Length <= 8 ? id : id[..8]);
+
+    async Task ViewJson(Resource<TResource> row)
+    {
+        var json = JsonSerializer.Serialize(row, new JsonSerializerOptions { WriteIndented = true });
+        await DialogService.OpenAsync<JsonViewerDialog>(
+            "Resource JSON",
+            new Dictionary<string, object> { ["Json"] = json },
+            new DialogOptions { Width = "900px", Height = "650px", Resizable = true, Draggable = true }
+        );
+    }
+    
 }
