--- a/DemonsAndDogs/Layout/NavMenu.razor
+++ b/DemonsAndDogs/Layout/NavMenu.razor
@@ -1,6 +1,4 @@
-﻿@using UIComponents.ResourceRegistry
-@inject IResourceManagerRegistry Registry
-
+﻿
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">DemonsAndDogs</a>
@@ -17,15 +15,11 @@
                 <span class="bi bi-house-door-fill-nav-menu"></span> Home
             </NavLink>
         </div>
-
-        @foreach (var resource in Registry.GetRegisteredResources())
-        {
-            <div class="nav-item px-3">
-                <NavLink class="nav-link" href="@($"/{resource}/manager")">
-                    @FormatName(resource)
-                </NavLink>
-            </div>
-        }
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/CreateSchema" Match="NavLinkMatch.All">
+                <span class="bi bi-house-door-fill-nav-menu"></span> Create Schema
+            </NavLink>
+        </div>
     </nav>
 </div>
 
